<resources>
    <string name="app_name">MeetUp</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="or">Or</string>
    <string name="social">Social</string>
    <string name="register">Register</string>
    <string name="image">Image</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="confirm_password">Confirm password</string>
</resources>
