<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="niceguys.apps.meetup.RegisterActivity" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRegisterBackground"
            android:focusableInTouchMode="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_register_photo"
                android:layout_width="@dimen/activity_register_circle_view_size"
                android:layout_height="@dimen/activity_register_circle_view_size"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:foreground="@drawable/foreground_white_oval_ripple"
                android:src="@drawable/placeholder_camera"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="@dimen/activity_register_circle_view_border_width"
                app:layout_constraintBottom_toTopOf="@id/ti_layout_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="m" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_register_et_margin_start"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorRegisterAccentLight"
                app:layout_constraintBottom_toTopOf="@id/ti_layout_lastname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_register_photo"
                app:layout_constraintTop_toTopOf="@id/iv_register_photo"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_register_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRegisterAccentLight"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/activity_login_et_padding_horizontal"
                    android:paddingEnd="@dimen/activity_login_et_padding_horizontal"
                    android:paddingBottom="@dimen/activity_login_et_padding_bottom"
                    android:textColor="@color/color_drawable_tint"
                    tools:targetApi="m" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_register_et_margin_start"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorRegisterAccentLight"
                app:layout_constraintBottom_toBottomOf="@id/iv_register_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_register_photo"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_firstname"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_register_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRegisterAccentLight"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/activity_login_et_padding_horizontal"
                    android:paddingEnd="@dimen/activity_login_et_padding_horizontal"
                    android:paddingBottom="@dimen/activity_login_et_padding_bottom"
                    android:textColor="@color/color_drawable_tint"
                    tools:targetApi="m" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginTop="@dimen/activity_register_et_email_margin_top"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorRegisterAccentLight"
                app:layout_constraintBottom_toTopOf="@id/ti_layout_age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRegisterAccentLight"
                    android:drawableStart="@drawable/ic_mail_outline"
                    android:drawablePadding="@dimen/activity_login_et_drawable_padding"
                    android:drawableTint="@color/color_drawable_tint"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/activity_login_et_padding_horizontal"
                    android:paddingEnd="@dimen/activity_login_et_padding_horizontal"
                    android:paddingBottom="@dimen/activity_login_et_padding_bottom"
                    android:textColor="@color/color_drawable_tint"
                    tools:targetApi="m" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorRegisterAccentLight"
                app:layout_constraintBottom_toTopOf="@id/ti_layout_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_email"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_register_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRegisterAccentLight"
                    android:drawableStart="@drawable/ic_event"
                    android:drawablePadding="@dimen/activity_login_et_drawable_padding"
                    android:drawableTint="@color/color_drawable_tint"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/age"
                    android:inputType="date"
                    android:paddingStart="@dimen/activity_login_et_padding_horizontal"
                    android:paddingEnd="@dimen/activity_login_et_padding_horizontal"
                    android:paddingBottom="@dimen/activity_login_et_padding_bottom"
                    android:textColor="@color/color_drawable_tint"
                    tools:targetApi="m" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorRegisterAccentLight"
                app:layout_constraintBottom_toTopOf="@id/ti_layout_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_age"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRegisterAccentLight"
                    android:drawableStart="@drawable/ic_lock_outline"
                    android:drawablePadding="@dimen/activity_login_et_drawable_padding"
                    android:drawableTint="@color/color_drawable_tint"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:paddingStart="@dimen/activity_login_et_padding_horizontal"
                    android:paddingEnd="@dimen/activity_login_et_padding_horizontal"
                    android:paddingBottom="@dimen/activity_login_et_padding_bottom"
                    android:singleLine="true"
                    android:textColor="@color/color_drawable_tint"
                    tools:targetApi="m" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorRegisterAccentLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_password"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintVertical_chainStyle="packed">

                <EditText
                    android:id="@+id/et_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorRegisterAccentLight"
                    android:drawableStart="@drawable/ic_lock_open_outline"
                    android:drawablePadding="@dimen/activity_login_et_drawable_padding"
                    android:drawableTint="@color/color_drawable_tint"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/confirm_password"
                    android:maxLines="1"
                    android:paddingStart="@dimen/activity_login_et_padding_horizontal"
                    android:paddingEnd="@dimen/activity_login_et_padding_horizontal"
                    android:paddingBottom="@dimen/activity_login_et_padding_bottom"
                    android:singleLine="true"
                    android:textColor="@color/color_drawable_tint"
                    tools:targetApi="m" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_button_height"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:background="@color/colorRegisterAccentLight"
                android:fontFamily="sans-serif-light"
                android:foreground="@drawable/foreground_white_rectangle_ripple"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_or"
                app:layout_constraintEnd_toEndOf="@string/password"
                app:layout_constraintStart_toStartOf="@string/password"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_confirm_password"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_register_tv_or_vertical_margin"
                android:layout_marginBottom="@dimen/activity_register_tv_or_vertical_margin"
                android:fontFamily="sans-serif-light"
                android:text="@string/or"
                android:textColor="@color/colorRegisterAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/btn_register_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_register" />

            <ImageButton
                android:id="@+id/btn_register_vk"
                android:layout_width="@dimen/activity_login_btn_social_size"
                android:layout_height="@dimen/activity_login_btn_social_size"
                android:background="@drawable/button_social_background"
                android:contentDescription="@string/social"
                android:foreground="@drawable/foreground_white_oval_ripple"
                android:src="@drawable/vk_logo"
                app:layout_constraintBottom_toBottomOf="@id/btn_register_facebook"
                app:layout_constraintEnd_toStartOf="@id/btn_register_facebook"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_register_facebook"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/btn_register_facebook"
                android:layout_width="@dimen/activity_login_btn_social_size"
                android:layout_height="@dimen/activity_login_btn_social_size"
                android:background="@drawable/button_social_background"
                android:contentDescription="@string/social"
                android:foreground="@drawable/foreground_white_oval_ripple"
                android:src="@drawable/facebook_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_register_twitter"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/btn_register_vk"
                app:layout_constraintTop_toBottomOf="@id/tv_or"
                tools:targetApi="m" />

            <ImageButton
                android:id="@+id/btn_register_twitter"
                android:layout_width="@dimen/activity_login_btn_social_size"
                android:layout_height="@dimen/activity_login_btn_social_size"
                android:background="@drawable/button_social_background"
                android:contentDescription="@string/social"
                android:foreground="@drawable/foreground_white_oval_ripple"
                android:src="@drawable/twitter_logo"
                app:layout_constraintBottom_toBottomOf="@id/btn_register_facebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/btn_register_facebook"
                app:layout_constraintTop_toTopOf="@id/btn_register_facebook"
                tools:targetApi="m" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>