<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRegisterBackground"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_logo"
                style="@style/Base.TextAppearance.AppCompat.Display2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@id/tv_info_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_info_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="Lorem ipsum"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/tv_info_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_info_text"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_start_tv_info_horizontal_margin"
                android:layout_marginTop="@dimen/activity_start_tv_info_vertical_margin"
                android:layout_marginEnd="@dimen/activity_start_tv_info_horizontal_margin"
                android:alpha="0.7"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="Lorem ipsum dolor sit amet, consectetur tornol elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/view_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_title" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_start_divider_height"
                android:layout_marginStart="@dimen/activity_start_divider_horizontal_margin"
                android:layout_marginTop="@dimen/activity_start_divider_vertical_margin"
                android:layout_marginEnd="@dimen/activity_start_divider_horizontal_margin"
                android:alpha="0.5"
                android:background="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_text" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_button_height"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:background="@color/colorRegisterAccentLight"
                android:fontFamily="sans-serif-light"
                android:foreground="@drawable/button_white_ripple"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/btn_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_login_button_height"
                android:layout_marginStart="@dimen/activity_login_et_margin_horizontal"
                android:layout_marginTop="@dimen/activity_start_button_vertical_margin"
                android:layout_marginEnd="@dimen/activity_login_et_margin_horizontal"
                android:background="@drawable/button_register_background"
                android:fontFamily="sans-serif-light"
                android:foreground="@drawable/button_white_ripple"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>